Fix z-index in albums page

--- a/public/style/album.css
+++ b/public/style/album.css
@@ -53,6 +53,8 @@ img {
 	}
 
 	.imgContainer {
+		position: relative;
+		z-index: 1;
 		float: left;
 		width: 50%;
 	}
@@ -63,7 +65,6 @@ img {
 	}
 
 	.modal-content img {
-		width: 98%;
 		position: absolute;
 		top: 2em;
 	}
